package es.uah.matcomp.proyecto.modelo.individuo;

public class PlantillaIndividuo {
}
