package es.uah.matcomp.proyecto.modelo.parametros;

public class Parametros {
}
